2011-04-11  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: save tmp buffer, this fixes `cd -'.
	* FileCopy.cc: (FileCopyPeerFA::Clone) copy orig_url.

2011-03-25  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h: (url_decode, append_url_encoded) new methods.
	* url.cc, url.h: drop functions decode_string and encode_string.
	* network.h: use proper includes.
	* netrc.cc, CmdExec.cc, FileAccess.cc, FileCopy.cc, FileSet.cc,
	  FileSetOutput.cc, Fish.cc, FtpDirList.cc, Http.cc, HttpDir.cc,
	  IdNameCache.cc, LocalAccess.cc, MirrorJob.cc, MirrorJob.h,
	  NetAccess.cc, OutputJob.cc, OutputJob.h, ResMgr.cc, Resolver.cc,
	  SFtp.cc, StringSet.cc, misc.cc, misc.h, commands.cc, complete.cc,
	  history.cc, lftp.cc, netrc.cc: don't use sprintf, decode_string,
	  encode_string; drop xasprintf and xvasprintf.
	* ftpclass.cc, resource.cc: (ftp:use-ip-tos) new setting.

2011-03-16  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc, SFtp.h: don't use uid_t and gid_t, may fix a problem
	  with sign expansion on some systems.

2011-03-09  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, Torrent.h: use fadvise during validation;
	  fixed fallocate call to pass correct file length;
	  optimized validation by removing realloc call.
	* xstring.cc, xstring.h: outline add_space; (get_space2) new method;
	  change get_space to take one arg.
	* xmap.cc: optimize make_hash for hash_size==1.
	* buffer.cc: use get_space2.
	* ftpclass.cc: better wording in debug.

2011-03-03  Alexander V. Lukyanov <lav@yars.free.net>

	* netkey.c: new file (from Ryan Thomas <ryan@coraid.com>).
	* ftpclass.cc, ftpclass.h, resource.cc: add netkey support;
	  (ftp:netkey-allow) new setting (original patch from Ryan Thomas).

2011-02-24  Alexander V. Lukyanov <lav@yars.free.net>

	* pgetJob.cc: check for chunk[0] error, avoids a segfault.
	* Torrent.cc, Torrent.h: (Torrent::CanAccept, NoTorrentCanAccept)
	  new methods; don't accept connections if no torrent can accept.
